--- a/Visual Studio/Website/Assets/css/FontStyleSheet.css
+++ b/Visual Studio/Website/Assets/css/FontStyleSheet.css
@@ -1,14 +1,14 @@
 ﻿@font-face {
-    font-family: Josefin Sans Light;
-    src: url("../../Assets/fonts/JosefinSans-Light.ttf");
+    font-family: PT Sans Caption;
+    src: url("../../Assets/fonts/PT_Sans-Caption-Web-Regular.ttf");
 }
 
 * {
-    font-family: Josefin Sans Light;
-    src: url("../../Assets/fonts/JosefinSans-Light.ttf");
+    font-family:  PT Sans Caption;
+    src: url("../../Assets/fonts/PT_Sans-Caption-Web-Regular.ttf");
 }
 
 @font-face {
-    font-family: Josefin Sans;
-    src: url("../../Assets/fonts/JosefinSans-Regular.ttf");
+    font-family:  PT Sans Caption;
+    src: url("../../Assets/fonts/PT_Sans-Caption-Web-Regular.ttf");
 }
